force-app/main/default/objects/Prepayment__c/Prepayment__c.object-meta.xml
<CustomObject>
    <label>Prepayment</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Prepayment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepayments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>