force-app/main/default/objects/Prepayment__c/fields/Finance_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval_Status__c</fullName>
    <label>Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AppovalStatus</valueSetName>
    </valueSet>
</CustomField>