force-app/main/default/objects/Prepayment__c/fields/Finance_Audit_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Finance_Audit_Remarks__c</fullName>
    <label>Finance Audit Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>