force-app/main/default/objects/Prepayment__c/fields/Is_Need_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Need_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>*Is Need Approval</label>
    <type>Checkbox</type>
</CustomField>