force-app/main/default/objects/Prepayment__c/fields/Need_Approval_Item__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval_Item__c</fullName>
    <label>Need Approval Item</label>
    <summaryFilterItems>
        <field>Prepayment_Distribution__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Draft, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Prepayment_Distribution__c.Prepayment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>