force-app/main/default/objects/Prepayment__c/fields/Prepayment_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Distributed__c</fullName>
    <label>Prepayment Distributed</label>
    <summarizedField>Prepayment_Distribution__c.Prepayment_Distribution_Amount__c</summarizedField>
    <summaryForeignKey>Prepayment_Distribution__c.Prepayment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>