force-app/main/default/objects/Prepayment__c/fields/Prepayment_Not_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Not_Distributed__c</fullName>
    <formula>Amount__c -  Prepayment_Distributed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepayment Not Distributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>