force-app/main/default/objects/Prepayment__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>