force-app/main/default/objects/Prepayment__c/validationRules/Prepayment_Distributed_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Prepayment_Distributed_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Prepayment_Distributed__c &gt;  Amount__c &amp;&amp;   ISPICKVAL(Finance_Approval_Status__c, &apos;In Progress&apos;)</errorConditionFormula>
    <errorMessage>The prepayment distributed cannot exceed the prepayment amount.</errorMessage>
</ValidationRule>